appId: tech.jala.android.lite
name: AT26-27
tags: 
  - AT26-27
---
- clearState
- launchApp

- runFlow: login_email.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Lite"
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    waitToSettleTimeoutMs: 5000 
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: klik kolam  ## klik kolam A1##
- swipe:
    direction: LEFT ## menuju pakan ##
- tapOn:
    point: 311, 1155
- tapOn: "Tidak"
- tapOn:
    point: 296, 992 ## klik jumlah pakan#
- inputText: "5,5"
- hideKeyboard
- tapOn: 
    point: 306, 967 ## klik opsional catatan##
- inputText: "Test Automation"

- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000
- stopApp

- clearState
- launchApp

- runFlow: login_email.yaml

## Langsung skip ke step setelah login selesai 
- tapOn: 
    text: "Lite"
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    waitToSettleTimeoutMs: 5000
    delay: 5000

- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: klik kolam  ## klik kolam A1##
- swipe:
    direction: LEFT


## klik edit##
- tapOn: 
    point: 555, 343

- assertVisible: "5,5"

- tapOn: "Pilih Stok"
- tapOn: "Pakan Bintang 584 (kg)"
- tapOn: 
    point: 296, 992
- eraseText
- inputText: "2,5"
- hideKeyboard
- tapOn:
    point: 306, 967
- eraseText
- inputText: "Edit jumlah pakan"

- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000
- stopApp





