
appId: tech.jala.android.lite
name: AT53-54
tags: 
  - AT53-54
---
- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    label: "klik kolam" 
    waitToSettleTimeoutMs: 5000
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1"  ## pick kolam A1 ##

- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT ## PENYAKIT ##
- tapOn:
    text: "random"
    optional: true
    repeat: 2
    delay: 2000 ## DELAY##
- tapOn: 
    point: 311, 1155 ##catatan##
    label: "klik +catatan" 
- tapOn: "Pilih nama penyakit"
- tapOn:
    point: 63, 833 ## pointer tap ems ##
    label: "klik EMS" 
- tapOn: "Catatan"
- inputText: "Menambahkan penyakit EMS"
- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000 
- stopApp

- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    label: "klik kolam" 
    waitToSettleTimeoutMs: 5000 
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1"  ## pick kolam A1 ##

- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT ## PENYAKIT ##
- tapOn:
    text: "random"
    optional: true
    repeat: 2
    delay: 2000 ## DELAY##

- tapOn: 
    point: 573, 316 ##edit##
    label: "klik edit" 
## assert data ##
- assertVisible: "Early Mortality Syndrome"

- tapOn: "Early Mortality Syndrome"
- tapOn:
    point: 73, 638
    label: "memilih Black Spot Disease"
- tapOn: "Menambahkan penyakit EMS"
- eraseText
- inputText: "Ubah penyakit menjadi Black Spot Disease"
- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000 
- stopApp
