appId: tech.jala.android.lite
---
- launchApp
- tapOn: "Masuk"
- tapOn: "Masuk dengan No HP atau Email"
- tapOn: "Lupa kata sandi?"

