appId: tech.jala.android.lite
---
- launchApp
- tapOn: "Masuk"
- tapOn: "Masuk dengan No HP atau Email"
- tapOn: "No. Handphone atau Email"
- inputText: "08888321272"
- tapOn : "Kata Sandi"
- inputText : "jalaistimewa"
- tapOn : "Masuk"
- tapOn : 
    text: "Masuk"
    index : 1
- tapOn :
    point : 418, 1248
- tapOn :
    point : 1016, 200
